added responsive design for index.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="en-us" http-equiv="Content-Language">
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <meta name="application-name" content="TEAMMATES - Online Peer Feedback/Evaluation System for Student Team Projects">
@@ -54,9 +55,19 @@
                 <br>
                 <h1 id="caption" style="text-align: center;">Student peer evaluations/feedback, shareable instructor comments, and more...</h1>
                 <div id="contentHolder">
-                  
-                     <img alt="Overview of TEAMMATES - anonymous peer feedback and confidential peer evaluations" src="images/overview.png" width="750px" align="right">
-
+                    <div class ="img-row">
+                    <div id="img-1">
+                        <img alt = "Confidential Peer Evaluation" align="middle" src="images/overview-1.png" style="max-width: 250px;">
+                    </div>
+                    <div id="img-2">
+                    <img alt = "Sharable Instructor Comments" align="middle" src="images/overview-2.png" style="max-width: 250px;">
+                    </div>
+                    <div id="img-3">
+                    <img alt = "Searchable Student Records" align="middle" src="images/overview-3.png" style="max-width: 250px;">
+                    </div>
+                     <!-- <img alt="Overview of TEAMMATES - anonymous peer feedback and confidential peer evaluations" src="images/overview.png" width="750px" align="right">
+                    --> 
+                    </div>
                 <div class="align-center">
                 <br>
                 <table width="100%">
